@startuml diagram

class Leaderboard{
+ List<User> getUsers()
+ void addUser(User)
+ void sortList()
+ void toString()
}

class User{
- int points
- String name
+ int getPoints()
+ void addPoints(int)
+ String getName()
+ void setName(String)
+ Collection<Task> getTasks()
+ void addTask(Task)
+ void removeTask(Task)
+String toString()
}

class CleanERemoteController {

}

class RemoteCleanEAccess {

}

class ResponseController {

}

class CleanEService {

}



class Task {
- List<String> days;
- String taskName;
- int pointsValue;
- boolean completed = false;
- String dueDay;
+ void setAssignedUser(User)
+ void setTrue()
+ User getAssignedUser()
+ String getTaskName()
+ int getPointsValue()
+ boolean isCompleted()
+ String getDueDay()
+ String toString()
}

CleanEService ..> Leaderboard
Leaderboard  --> "*" User: Contains
User "1" -- "*" Task: Has
CleanERemoteController ..> RemoteCleanEAccess
RemoteCleanEAccess <..> ResponseController: HTTP
ResponseController ..> CleanEService



@enduml